--- a/mosaicov2/video.html
+++ b/mosaicov2/video.html
@@ -75,6 +75,7 @@
             </div>
           </div>
 
+
           <div class="videos video2">
             <div>
               <h3>
@@ -299,7 +300,7 @@
         </div>
       </div>
       <div id="player" class="video-off">
-        <video width="600" height="600" controls id="video">
+        <video width="600" height="600" controls>
           <source src="./galeria/videos/01_Fiat.mp4" type="video/mp4">
         </video>
       </div>
